- [MINOR] Add checkMode method to msaltestapp infra (#2141)
- [MINOR] Updated target, compile sdk, AGP and gradle versions  (#2142)
- [MINOR] Add new apk name to BrokerHost infra (#2152)
- [MINOR] Send key to request broker data in all BrokerOperationBundle (#2159)
- [MINOR] Catch strongbox exception on Android 14 (#2158)

V.15.0.0
----------
- [MAJOR] Move Broker side active broker cache to broker repo (#2123)
- [MINOR] Add span names for the BrokerOperationRequestDispatcher and PassthroughExecutor (#2100)
- [PATCH] Add key derivation method that takes SecretKey object as argument (#2113)
- [MAJOR] AccountManagerStorageHelper should not force cast IBrokerAccount into AndroidBrokerAccount (#2110) (Breaking change to Broker only)
- [MAJOR] Tidy up BrokerValidator (#2107)
- [PATCH] Adding null checks for CancelHelper (CBA) (#2105)
- [MINOR] Update YubiKit version to 2.3.0 (#2112) Note: This version of YubiKit contains new logging libraries. Projects using the SLF4j and/or logback-android dependencies must bump their versions to at least 2.0.7 and 3.0.0, respectively.
- [MINOR] Capture perf telemetry for cache & network operations (#2124)
- [MINOR] Add method to flush shared preference file manager (#2130)
- [PATCH] Improve logging in BrokerMsalController.verifyBrokerVersionIsSupported (#2132)
- [MINOR] Refactored OneAuthTestApp infra in order to process LTW test cases (#2136)
- [PATCH] Fix NPE in OTEL code for DCF flow (#2139)
- [PATCH] Fixed debug apps not recognized as active broker issue (#2138)
- [MINOR] Updated target, compile sdk, AGP and gradle versions  (#2142)
- [MINOR] Add checkMode method to msaltestapp infra (#2141)
- [MINOR] Update TokenRequest.java with NAA params (#2143)
- [MINOR] Add new apk name to BrokerHost infra (#2152)

V.14.0.1
----------
- [PATCH] Reverting token removal logic (#2117)

V.14.0.0
----------
- [PATCH] Make AndroidWrappedKeyLoader return the right alias (#2102)
- [PATCH] Read private key before public key to avoid OS bug (#2091)